--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,4 +14,4 @@
   <% end %>
 </table>
 
-<p><%= link_to "New Category", new_category_path %></p>
+<p><%= link_to "New Category", [:new, :category] %></p>
