--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -1,7 +1,7 @@
 - title "Galleries", false
 - if admin_signed_in?
   %h2
-    = link_to (image_tag 'icons/add.png') + " New Gallery", new_gallery_path
+    = link_to button(:add, "New Gallery"), [:new, :gallery]
 
 
 - if admin_signed_in?
