--- a/app/views/order_items/show.html.haml
+++ b/app/views/order_items/show.html.haml
@@ -10,6 +10,6 @@
 %p
   = edit_button_for @order, @order_item
   |
-  = delete_button_for @order, @order_item, "Are you sure?"
+  = delete_button_for @order, @order_item, :confirm => "Are you sure?"
   |
   = link_to "View All", order_items_path
