--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -15,6 +15,6 @@
 %p
   = edit_button_for @order
   |
-  = delete_button_for @order, "Are ou sure? Your entire order will be lost."
+  = delete_button_for @order, :confirm => "Are you sure? Your entire order will be lost."
   |
   = link_to "View All", orders_path
