--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
   <% for category in @categories %>
     <tr>
       <td><%= category.name %></td>
-      <td><%= link_to "Show", [category] %></td>
+      <td><%= link_to button(:view), category %></td>
       <td><%= edit_button_for category %></td>
       <td><%= delete_button_for category, :confirm => 'Are you sure?' %></td>
     </tr>
