--- a/app/views/order_items/edit.html.haml
+++ b/app/views/order_items/edit.html.haml
@@ -3,6 +3,5 @@
 = render 'form'
 
 %p
-  = link_to "Show", order_item_path(@order_item)
-  |
-  = link_to "View All", order_items_path
+  = link_to button(:view, "Show"), @order_item
+  = link_to button(:back, "View All"), :order_items
