--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -2,7 +2,7 @@
 - for photo in @photos
   %div{ :class => "photo #{photo.orientation}"}
     .control
-      = link_to (image_tag "icons/thumb_up.png", :class => 'button'), ""
+      = like_button_for photo
 
       - if user_signed_in? and current_user.can_purchase? @gallery
         = add_cart_button_for @gallery, photo
@@ -11,5 +11,4 @@
         = edit_button_for @gallery, photo
         = delete_button_for @gallery, photo, :confirm => "Are you sure?"
 
-    = link_to (image_tag photo.image.url(:small)), photo.image.url, :rel => "lightbox[#{@gallery.name}]"
-
+    = link_to (image_tag photo.image.url(:small)), photo.image.url
