--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -6,8 +6,8 @@
   - for order in @orders
     %tr
       %td= order.user_id
-      %td= link_to 'Show', order
+      %td= link_to button(:view, 'Show'), order
       %td= edit_button_for order
       %td= delete_button_for order, :confirm => "Are you sure?"
 
-%p= link_to "New Order", new_order_path
+%p= link_to "New Order", [:new, :order]
