--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'form' %>
 
-<p><%= link_to "Back to List", gallery_path(@gallery) %></p>
+<p><%= link_to button(:back, "Back to List"), @gallery %></p>
