--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-  <%= link_to "Edit", edit_gallery_photo_path(@gallery, @photo) %> |
-  <%= link_to "Destroy", [@gallery, @photo], :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", gallery_path(@gallery) %>
+  <%= edit_button_for @gallery, @photo %>
+  <%= delete_button_for @gallery, @photo, :confirm => 'Are you sure?' %>
+  <%= link_to button(:back, "View All"), @gallery %>
 </p>
