--- a/app/views/prints/index.html.haml
+++ b/app/views/prints/index.html.haml
@@ -11,4 +11,4 @@
       %td= edit_button_for print
       %td= delete_button_for print, :confirm => "Are you sure?"
 
-%p= link_to "New Print", [:new, :print]
+%p= link_to button(:add, "New Print"), [:new, :print]
