added a new 'current_order' helper method for the application, can now place orders with (hopefully) related pictures.  will test by next commit

--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -5,7 +5,7 @@
       = like_button_for photo
 
       - if user_signed_in? and current_user.can_purchase? @gallery
-        = add_cart_button_for @gallery, photo
+        = add_cart_button_for [current_order, :order_item], :photo_id => photo.id
 
       - if admin_signed_in?
         = edit_button_for @gallery, photo
