--- a/app/views/order_items/edit.html.haml
+++ b/app/views/order_items/edit.html.haml
@@ -4,4 +4,4 @@
 
 %p
   = link_to button(:view, "Show"), @order_item
-  = link_to button(:back, "View All"), :order_items
+  = link_to button(:back, "View All"), @order
