--- a/app/views/order_items/show.html.haml
+++ b/app/views/order_items/show.html.haml
@@ -10,4 +10,4 @@
 %p
   = edit_button_for @order, @order_item
   = delete_button_for @order, @order_item, :confirm => "Are you sure?"
-  = link_to button(:back, "View All"), :order_items
+  = link_to button(:back, "View All"), @order
