rewrote my edit and delete button api and updated all calls to allow more dynamic functionality

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,8 +8,8 @@
     <tr>
       <td><%= category.name %></td>
       <td><%= link_to button(:view), category %></td>
-      <td><%= edit_button_for category %></td>
-      <td><%= delete_button_for category, :confirm => 'Are you sure?' %></td>
+      <td><%= edit_button_for [ category ] %></td>
+      <td><%= delete_button_for [ category ] %></td>
     </tr>
   <% end %>
 </table>
