--- a/app/views/order_items/show.html.haml
+++ b/app/views/order_items/show.html.haml
@@ -10,6 +10,6 @@
   = @order_item.quantity
 
 %p
-  = edit_button_for @order, @order_item
-  = delete_button_for @order, @order_item, :confirm => "Are you sure?"
+  = edit_button_for [ @order, @order_item ]
+  = delete_button_for [ @order, @order_item ]
   = link_to button(:back, "View All"), @order
