--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -13,6 +13,6 @@
 
 
 .control
-  = edit_button_for @order
-  = delete_button_for @order, :confirm => "Are you sure? Your entire order will be lost."
+  = edit_button_for [ @order ]
+  = delete_button_for [ @order ], :confirm => "Are you sure you want to clear this order?"
   = link_to button(:back), :orders
