--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -2,13 +2,13 @@
 - for photo in @photos
   %div{ :class => "photo #{photo.orientation}"}
     .control
-      = like_button_for photo
+      = like_button_for [ photo ]
 
       - if user_signed_in? and current_user.can_purchase? @gallery
         = add_cart_button_for [current_order, :order_item], :photo_id => photo.id
 
       - if admin_signed_in?
-        = edit_button_for @gallery, photo
-        = delete_button_for @gallery, photo, :confirm => "Are you sure?"
+        = edit_button_for [ @gallery, photo ]
+        = delete_button_for [ @gallery, photo ]
 
     = link_to (image_tag photo.image.url(:small)), photo.image.url
