--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -7,7 +7,7 @@
     %tr
       %td= order.user_id
       %td= link_to button(:view, 'Show'), order
-      %td= edit_button_for order
-      %td= delete_button_for order, :confirm => "Are you sure?"
+      %td= edit_button_for [ order ]
+      %td= delete_button_for [ order ]
 
 %p= link_to "New Order", [:new, :order]
