added styling and redirects away from order_item#show, since all relevant info is now on the order#show page

--- a/app/assets/stylesheets/image_gallery.css
+++ b/app/assets/stylesheets/image_gallery.css
@@ -49,3 +49,22 @@
 #sharing {
   clear: both;
 }
+
+.orders img.order_item {
+  float: left;
+}
+
+.orders ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.orders ul li {
+  display: block;
+  padding: 5px;
+  clear: both;
+}
+
+.orders td, .orders th {
+  padding: 0 5px;
+}
