--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -1,7 +1,7 @@
 - title "Galleries", false
 - if admin_signed_in?
   %h2
-    = new_button_for [:gallery], :alt => "New Gallery"
+    = new_button_for [:gallery], :alt => "New Gallery", :text => true
 
 
 - if admin_signed_in?
