--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -11,4 +11,4 @@
         = edit_button_for [ @gallery, photo ]
         = delete_button_for [ @gallery, photo ]
 
-    = link_to (image_tag photo.image.url(:small)), photo.image.url
+    = link_to (image_tag photo.image.url(:small)), [@gallery, photo]
