--- a/app/views/galleries/show.html.haml
+++ b/app/views/galleries/show.html.haml
@@ -15,9 +15,9 @@
   = @gallery.name.humanize
 - if admin_signed_in?
   %span.control
-    = new_button_for [ @gallery, :photo ], :alt => "New Photo", :text => true
+    = new_button_for [ @gallery, :photo ], :alt => "Add Photo", :text => true
 
-    = edit_button_for [ @gallery ], :alt => "Edit Photo", :text => true
+    = edit_button_for [ @gallery ], :alt => "Edit Gallery", :text => true
     = delete_button_for [ @gallery ], :confirm => "Are you sure? This will delete the entire gallery!", :alt => "Delete Gallery", :text => true
 
 #photos
