--- a/app/views/galleries/new.html.haml
+++ b/app/views/galleries/new.html.haml
@@ -3,4 +3,4 @@
 = render 'form'
 
 %p
-  = link_to button(:back, "Back to List"), :galleries
+  = link_to button(:back, :alt => "Back to List"), :galleries
