--- a/app/views/orders/edit.html.haml
+++ b/app/views/orders/edit.html.haml
@@ -3,5 +3,5 @@
 = render 'form'
 
 %p
-  = link_to button(:view, "Show"), @order
-  = link_to button(:back, "View All"), :orders
+  = link_to button(:view, :alt => "Show"), @order
+  = link_to button(:back, :alt => "View All"), :orders
