--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render :partial => 'form' %>
 
 <p>
-  <%= link_to button(:view, "Show"), [@gallery, @photo] %>
-  <%= link_to button(:back, "View All"), @gallery %>
+  <%= link_to button(:view, :alt => "Show"), [@gallery, @photo] %>
+  <%= link_to button(:back, :alt => "View All"), @gallery %>
 </p>
