--- a/app/views/prints/edit.html.haml
+++ b/app/views/prints/edit.html.haml
@@ -3,5 +3,5 @@
 = render 'form'
 
 %p
-  = link_to buttons(:view, "Show"), @print
-  = link_to buttons(:back, "View All"), :prints
+  = link_to buttons(:view, :alt => "Show"), @print
+  = link_to buttons(:back, :alt => "View All"), :prints
