fixed redirection issues with prints; modified pricing business rules for order items;

--- a/app/assets/stylesheets/image_gallery.css
+++ b/app/assets/stylesheets/image_gallery.css
@@ -87,9 +87,12 @@
 .orders td, .orders th {
   padding: 0 auto;
   text-align: center;
-
 }
 
 .pagination a {
   font-size: 12px;
+}
+
+.discount {
+  color: green;
 }
