--- a/app/views/prints/index.html.haml
+++ b/app/views/prints/index.html.haml
@@ -11,4 +11,4 @@
       %td= edit_button_for [ print ]
       %td= delete_button_for [ print ]
 
-%p= new_button_for [:new, :print], :alt => "New Print Type"
+%p= new_button_for [:print], :alt => "New Print Type"
