added some fixes to form and order display, fixed syntax issue with controller

--- a/app/views/order_items/_form.html.haml
+++ b/app/views/order_items/_form.html.haml
@@ -1,9 +1,10 @@
 - form_for [ @order, @order_item ] do |f|
   = f.error_messages
   %p
+    = image_tag @order_item.photo.image.url(:small) unless @order_item.photo.nil?
     = f.label :photo_id
     %br
-    = f.text_field :photo_id
+    = f.select :photo_id, Photo.all.collect {|p| [ "#{p.image.original_filename}", p.id]}
   %p
     = f.label :print_id, "Print:"
     %br
