fixed problem with photo_id not getting included in order_item creation; fixed problem with form attributes not being saved in new order_items (controller)

--- a/app/views/order_items/_form.html.haml
+++ b/app/views/order_items/_form.html.haml
@@ -1,7 +1,10 @@
 - form_for [ @order, @order_item ] do |f|
   = f.error_messages
   %p
+    = f.label :photo_id
+    %br
     = image_tag @order_item.photo.image.url(:small) unless @order_item.photo.nil?
+    = f.hidden_field :photo_id
   %p
     = f.label :print_id, "Print:"
     %br
