--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag 'form' %>
     <%= stylesheet_link_tag 'image_gallery' %>
     <%= stylesheet_link_tag 'lightbox' %>
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag "application" %>
     <%= yield(:head) %>
   </head>
   <body <%= "class='admin'" if admin_signed_in? %>>
