--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -8,5 +8,5 @@
         = edit_button_for @gallery, photo
         = delete_button_for @gallery, photo, :confirm => "Are you sure?"
 
-    = link_to (image_tag photo.image.url(:small)),
-        photo.image.url, :rel => "lightbox[#{@gallery.name}]"
+    = link_to (image_tag photo.image.url(:small)), photo.image.url, :rel => "lightbox[#{@gallery.name}]"
+
