--- a/app/views/order_items/_form.html.haml
+++ b/app/views/order_items/_form.html.haml
@@ -1,4 +1,4 @@
-- form_for [ @order, @order_item ] do |f|
+= form_for [ @order, @order_item ] do |f|
   = f.error_messages
   %p
     = f.label :photo_id
